# silver-flag-bot

./: .gitignore  Dockerfile  docker-compose.yml  logger.py  main.py  pyproject.toml  telegram.py
bot/: analyze.py  error.py  params.py  polling.py  sjc.py
data/: provider.py
notebook/: development.ipynb
sjc/: report.py  service.py
ssi/: client.py  client_model.py  client_service.py  client_service_test.py  client_test.py  options.py
trading/: analysis.py  data.py  data_provider.py  signal.py  strategy_model.py  timeframe.py
trading/signal/: enum.py  model.py
trading/strategy/: atr_trailing_stop.py  interface.py  interface_test.py  macd_vwap.py  multi_ma.py
trading/strategy_params/: strategy_params.py  strategy_params_test.py
